@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-07-25T08:31:41Z",
-  "count" : 3,
-  "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -1, +4 ],
+  "count" : 1,
+  "count_minmax" : [ 1, 1 ],
+  "count_decinc" : [ -0, +1 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
