@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-25T02:18:59Z",
+  "timestamp" : "2022-07-25T08:31:41Z",
   "count_outdated" : 257,
   "uniques_outdated" : 126,
   "count" : 286,
-  "uniques" : 142,
+  "uniques" : 143,
   "clones" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -79,6 +79,13 @@
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
