@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "uniques": 1
     },
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-25T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
